[package]
name = "tide-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
derive_more = "0.99.17"
hashbrown = "0.14.3"
int-enum = "0.5.0"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
num_enum = "0.7.1"
paste = "1.0.14"
